prevent auto zoom on mobile selection of input field

--- a/Merchandiser/Content/Site.css
+++ b/Merchandiser/Content/Site.css
@@ -23,6 +23,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+    /*http://stackoverflow.com/questions/11064237/prevent-iphone-from-zooming-form*/
+    font-size: 16px;
 }
 
 /*ui grid draggable css*/
